Bug 724631 - Check OSR condition inline (r=wmaddox+)

Inline the fastpath of the osr-enabled check.